--- a/style.css
+++ b/style.css
@@ -1,8 +1,18 @@
 body {
     margin:0;
     padding:0;
-    background:#FFFFF;
-   
+    .button {
+  background-color: #FFFF;
+  border: none;
+  color: white;
+  padding: 100% 100%;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 0% 0%;
+  cursor: crosshair;
+}
 }
  
 canvas {
